# SmallDB

./: .gitignore  CMakeLists.txt  Datatype.hpp  Datetime.hpp  Exceptions.hpp  Query.cpp  Query.hpp  README.md  SmallDB.cpp  SmallDB.hpp  TypeDB.hpp  architecture.txt  main.cpp
